# mold

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  action.yml  banshee.example.toml  deny.toml  docker-compose.yml  install.sh  justfile  mold.example.toml  release.toml
crates/banshee/: Cargo.toml  build.rs
crates/banshee/benches/: complete.rs  format.rs  parse.rs
crates/banshee/src/: lib.rs  main.rs
crates/banshee/src/cli/: analysis.rs  complete_cmd.rs  explain_cmd.rs  fix_cmd.rs  format_cmd.rs  init_cmd.rs  io.rs  lint_cmd.rs  mod.rs  parse_cmd.rs  render.rs  rules_cmd.rs  schema.rs  schema_cmd.rs
crates/banshee_completion/: Cargo.toml
crates/banshee_completion/src/: complete.rs  context.rs  lib.rs  triggers.rs
crates/banshee_completion/src/generators/: columns.rs  jsonb.rs  tables.rs
crates/banshee_completion/tests/: proptest.rs  snapshots.rs
crates/banshee_completion/tests/snapshots/: snapshots__after_from.snap  snapshots__cte_columns.snap  snapshots__delete_using_alias_columns.snap  snapshots__dml_cte_columns.snap  snapshots__insert_returning_alias_columns.snap  snapshots__join_alias_columns.snap  snapshots__join_qualified_columns.snap  snapshots__jsonb_fields.snap  snapshots__schema_qualified_columns.snap  snapshots__with_delete_cte_columns.snap
crates/banshee_config/: Cargo.toml
crates/banshee_config/src/: database.rs  format.rs  lib.rs  lint.rs
crates/banshee_format/: Cargo.toml
crates/banshee_format/src/: config.rs  lib.rs  pg_formatter.rs  validate.rs
crates/banshee_format/src/format/: expressions.rs  mod.rs  statements.rs
crates/banshee_format/src/pg_format/: expressions.rs  mod.rs  statements.rs
crates/banshee_format/src/rules/: keywords.rs  mod.rs
crates/banshee_format/tests/: pgformat_ddl.rs  proptest.rs  snapshots.rs
crates/banshee_format/tests/snapshots/: pgformat_ddl__alter_table.snap  pgformat_ddl__create_index.snap  pgformat_ddl__create_table.snap  snapshots__alter_table_multi_action.snap  snapshots__alter_table_rename.snap  snapshots__array_expression.snap  snapshots__case_expression.snap  snapshots__cast_expression.snap  snapshots__coalesce_nullif.snap  snapshots__complex_where.snap  snapshots__create_index.snap  snapshots__create_table.snap  snapshots__create_table_as_select.snap  snapshots__cte.snap  snapshots__delete.snap  snapshots__group_by_having.snap  snapshots__insert_values.snap  snapshots__jsonb_operators.snap  snapshots__multiple_statements.snap  snapshots__recursive_cte.snap  snapshots__select_with_join.snap  snapshots__select_with_multiple_joins.snap  snapshots__simple_select_compact.snap  snapshots__simple_select_sqlstyle.snap  snapshots__subquery.snap  snapshots__trailing_comma_style.snap  snapshots__update_set.snap  snapshots__window_function.snap
crates/banshee_hir/: Cargo.toml
crates/banshee_hir/src/: analyze.rs  binding.rs  lib.rs  noqa.rs
crates/banshee_hir/src/lint/: aliasing.rs  ambiguity.rs  capitalisation.rs  convention.rs  jsonb.rs  migration.rs  mod.rs  references.rs  safety.rs  structure.rs
crates/banshee_hir/tests/: ddl_resolution.rs  rule_cases.rs  snapshots.rs
crates/banshee_hir/tests/rule_cases/: aliasing_joins.yaml  convention_caps.yaml  dedup_count.yaml  migration.yaml  references_misc.yaml
crates/banshee_hir/tests/snapshots/: snapshots__cte_forward_reference_analysis.snap  snapshots__cte_resolution_analysis.snap  snapshots__delete_using_alias_analysis.snap  snapshots__dml_cte_local_scope_analysis.snap  snapshots__dml_cte_resolution_analysis.snap  snapshots__unknown_column_analysis.snap  snapshots__unknown_table_analysis.snap  snapshots__update_from_alias_analysis.snap  snapshots__update_without_where_analysis.snap
crates/banshee_lexer/: Cargo.toml
crates/banshee_lexer/src/: lib.rs
crates/banshee_lexer/src/snapshots/: banshee_lexer__tests__snapshot_all_jsonb_operators.snap  banshee_lexer__tests__snapshot_basic_select.snap  banshee_lexer__tests__snapshot_complex_window_function.snap  banshee_lexer__tests__snapshot_jsonb_query.snap  banshee_lexer__tests__snapshot_string_literals.snap
crates/banshee_lsp/: Cargo.toml
crates/banshee_lsp/src/: convert.rs  lib.rs  semantic_tokens.rs  sig_help.rs  symbols.rs
crates/mold/: Cargo.toml  build.rs
crates/mold/benches/: complete.rs  format.rs  parse.rs
crates/mold/benches/data/: large.sql
crates/mold/src/: lib.rs  main.rs
crates/mold/src/cli/: analysis.rs  complete_cmd.rs  explain_cmd.rs  fix_cmd.rs  format_cmd.rs  (+9 more)
crates/mold_completion/: Cargo.toml
crates/mold_completion/src/: complete.rs  context.rs  lib.rs  providers.rs  triggers.rs  types.rs
crates/mold_completion/tests/: proptest.rs  snapshots.rs
crates/mold_config/: Cargo.toml
crates/mold_config/src/: database.rs  format.rs  lib.rs  lint.rs
crates/mold_format/: Cargo.toml
crates/mold_format/src/: config.rs  edits.rs  lib.rs  pg_format.rs  pg_formatter.rs  printer.rs  validate.rs
crates/mold_format/tests/: pgformat_ddl.rs  proptest.proptest-regressions  proptest.rs  snapshots.rs
crates/mold_hir/: Cargo.toml
crates/mold_hir/src/: analyze.rs  binding.rs  lib.rs  lint.rs  noqa.rs  resolve.rs  scope.rs
crates/mold_hir/tests/: ddl_resolution.rs  rule_cases.rs  snapshots.rs
crates/mold_lexer/: Cargo.toml
crates/mold_lexer/src/: cursor.rs  lib.rs
crates/mold_lsp/: Cargo.toml
crates/mold_lsp/src/: convert.rs  lib.rs  semantic_tokens.rs  sig_help.rs  symbols.rs
crates/mold_parser/: Cargo.toml
crates/mold_parser/src/: event.rs  lib.rs  parser.rs  sink.rs  token_set.rs
crates/mold_parser/tests/: ddl_ast.rs  oracle.rs  proptest.rs  snapshots.rs
crates/mold_schema/: Cargo.toml
crates/mold_schema/src/: cache.rs  introspect.rs  lib.rs  provider.rs  snapshot.rs
crates/mold_syntax/: Cargo.toml
crates/mold_syntax/src/: lib.rs  syntax_kind.rs
crates/mold_templater/: Cargo.toml
crates/mold_templater/src/: lib.rs
fuzz/: Cargo.toml
fuzz/corpus/format/: 01_simple.sql  02_join.sql
fuzz/corpus/parse/: 02_cte.sql  03_jsonb.sql
fuzz/fuzz_targets/: complete.rs  format.rs  parse.rs
(+379 files in other folders)
