[workspace]
resolver = "2"
members = [
    "crates/mold_syntax",
    "crates/mold_lexer",
    "crates/mold_parser",
    "crates/mold_hir",
    "crates/mold_completion",
    "crates/mold_format",
    "crates/mold_config",
    "crates/mold_schema",
    "crates/mold_lsp",
    "crates/mold",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/octofhir/mold"
homepage = "https://github.com/octofhir/mold"

[workspace.dependencies]
# CST infrastructure (rust-analyzer's rowan fork with interning)
cstree = "0.13"
text-size = "1.1"

# Perfect hash function for keyword lookup
phf = { version = "0.13", features = ["macros"] }

# Testing
insta = { version = "1.34", features = ["glob"] }
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

# Utilities
dirs = "5.0"

# Config (serde + TOML)
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Internal crates
mold_syntax = { path = "crates/mold_syntax" }
mold_lexer = { path = "crates/mold_lexer" }
mold_parser = { path = "crates/mold_parser" }
mold_hir = { path = "crates/mold_hir" }
mold_completion = { path = "crates/mold_completion" }
mold_format = { path = "crates/mold_format" }
mold_config = { path = "crates/mold_config" }
mold_schema = { path = "crates/mold_schema" }
mold_lsp = { path = "crates/mold_lsp" }
