[workspace]
resolver = "2"
members = [
    "crates/banshee_syntax",
    "crates/banshee_lexer",
    "crates/banshee_parser",
    "crates/banshee_hir",
    "crates/banshee_completion",
    "crates/banshee_format",
    "crates/banshee_config",
    "crates/banshee_templater",
    "crates/banshee_schema",
    "crates/banshee_lsp",
    "crates/banshee",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/octofhir/banshee"
homepage = "https://github.com/octofhir/banshee"

[workspace.dependencies]
# CST infrastructure (rust-analyzer's rowan fork with interning)
cstree = "0.13"
text-size = "1.1"

# Perfect hash function for keyword lookup
phf = { version = "0.13", features = ["macros"] }

# Testing
insta = { version = "1.34", features = ["glob"] }
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

# Utilities
dirs = "5.0"

# Config (serde + TOML)
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Internal crates
banshee_syntax = { path = "crates/banshee_syntax", version = "0.1.0" }
banshee_lexer = { path = "crates/banshee_lexer", version = "0.1.0" }
banshee_parser = { path = "crates/banshee_parser", version = "0.1.0" }
banshee_hir = { path = "crates/banshee_hir", version = "0.1.0" }
banshee_completion = { path = "crates/banshee_completion", version = "0.1.0" }
banshee_format = { path = "crates/banshee_format", version = "0.1.0" }
banshee_config = { path = "crates/banshee_config", version = "0.1.0" }
banshee_templater = { path = "crates/banshee_templater", version = "0.1.0" }
banshee_schema = { path = "crates/banshee_schema", version = "0.1.0" }
banshee_lsp = { path = "crates/banshee_lsp", version = "0.1.0" }
