[package]
name = "banshee-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
banshee_completion = { path = "../crates/banshee_completion" }
banshee_format = { path = "../crates/banshee_format" }
banshee_parser = { path = "../crates/banshee_parser" }
text-size = "1.1"

[profile.release]
debug = 1
