[package]
name = "banshee_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["sql", "postgres", "lsp", "language-server"]
categories = ["development-tools"]
description = "Generic PostgreSQL language server built on the banshee engine."

[dependencies]
lsp-server = "0.7"
lsp-types = "0.94"
serde = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
text-size = { workspace = true }

banshee_parser = { workspace = true }
banshee_syntax = { workspace = true }
banshee_hir = { workspace = true }
banshee_completion = { workspace = true }
banshee_format = { workspace = true }
banshee_config = { workspace = true }
banshee_schema = { workspace = true }
