[package]
name = "mold"
version.workspace = true
edition = "2024"
license.workspace = true

[[bin]]
name = "mold"
path = "src/main.rs"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "format"
harness = false

[[bench]]
name = "complete"
harness = false

[dependencies]
mold_syntax.workspace = true
mold_lexer.workspace = true
mold_parser.workspace = true
mold_hir.workspace = true
mold_completion.workspace = true
mold_format.workspace = true
mold_config.workspace = true
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
criterion.workspace = true
text-size.workspace = true
sqlparser = "0.60.0"
