[package]
name = "mold"
version.workspace = true
edition = "2024"
license.workspace = true

[[bin]]
name = "mold"
path = "src/main.rs"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "format"
harness = false

[[bench]]
name = "complete"
harness = false

[features]
default = []
# Live database introspection for `mold lsp` and schema-aware linting. Pulls in
# sqlx + tokio; off by default so the binary stays lean when unused.
db = ["mold_schema/db", "dep:tokio"]

[dependencies]
mold_syntax.workspace = true
mold_lexer.workspace = true
mold_parser.workspace = true
mold_hir.workspace = true
mold_completion.workspace = true
mold_format.workspace = true
mold_config.workspace = true
mold_schema.workspace = true
mold_lsp.workspace = true
clap = { workspace = true }
anyhow = { workspace = true }
annotate-snippets = "0.11"
text-size = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
criterion.workspace = true
text-size.workspace = true
sqlparser = "0.60.0"
