[package]
name = "mold_completion"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Completion engine and schema provider traits for PostgreSQL SQL."
keywords = ["sql", "postgres", "completion", "lsp"]
categories = ["development-tools"]

[dependencies]
mold_syntax.workspace = true
mold_hir.workspace = true
mold_parser.workspace = true
text-size.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
