[package]
name = "mold_config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified, serde-based configuration for the mold SQL toolchain."

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
mold_format = { workspace = true }

[dev-dependencies]
