[package]
name = "mold_hir"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Name resolution, scopes and lint rules for PostgreSQL SQL."
keywords = ["sql", "postgres", "analysis", "lint"]
categories = ["development-tools"]

[dependencies]
mold_syntax.workspace = true
text-size.workspace = true

[dev-dependencies]
insta.workspace = true
mold_parser.workspace = true
