[package]
name = "mold_schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["sql", "postgres", "schema", "introspection"]
categories = ["database", "development-tools"]
description = "Postgres schema snapshots, on-disk cache, and schema providers for mold."

[features]
default = []
# Enables live Postgres introspection (pulls in sqlx + tokio). Off by default so
# embedders consuming only the cached snapshot stay async-free.
db = ["dep:sqlx", "dep:tokio"]

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
mold_hir = { workspace = true }
mold_completion = { workspace = true }

sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
], optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }

[dev-dependencies]
