[package]
name = "mold_templater"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["sql", "postgres", "template", "placeholder"]
categories = ["development-tools"]
description = "Placeholder substitution so parameterised SQL can be parsed and linted."

[dependencies]
text-size = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
